deployback/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
